<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gremsy_wrapper</name>
  <version>0.1.0</version>
  <description>ROS2 interface to control Gremsy gimbals</description>
  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <license>Proprietary</license>
  <author email="janek@fictionlab.pl">Jan Hernas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>gremsy_sdk</build_depend>
  <build_depend>generate_parameter_library</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>gremsy_sdk</exec_depend>
  <exec_depend>generate_parameter_library</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
